manifests/media/vpn/qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: vpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:latest@sha256:156ed7abe05c2e8cbe505e699909e2fe1779c71d977df5936484b692c61d3717
          securityContext:
            privileged: true
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - name: torrent
              containerPort: 6514
              protocol: TCP
            - name: torrent-udp
              containerPort: 6514
              protocol: UDP
            - name: webui
              containerPort: 8080
              protocol: TCP
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "(ip rule del table 51820; ip -6 rule del table 51820) || true"]

        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest@sha256:ffa4e82aa55e3bd3d2d99151f235fcd41b976303c4d4029940363452a59a3833
          volumeMounts:
            - name: config
              mountPath: /config
            - name: vpn-media
              mountPath: /downloads
              subPath: qbittorrent_downloads
          securityContext:
            runAsUser: 0
            runAsNonRoot: false

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: vpn-media
          persistentVolumeClaim:
            claimName: vpn-media
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: vpn
spec:
  selector:
    app: qbittorrent
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
    - name: torrent-tcp
      port: 6514
      targetPort: 6514
      protocol: TCP
    - name: torrent-udp
      port: 6514
      targetPort: 6514
      protocol: UDP
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: vpn
spec:
  ingressClassName: nginx
  rules:
    - host: qbittorrent.cluster.nelsondane.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
